--- a/css/components/reviews.scss
+++ b/css/components/reviews.scss
@@ -14,7 +14,7 @@
     }
 
     &__list{
-        min-height: 282px;
+        min-height: rem(282px);
     }
     &__pager{
         position: relative;
