--- a/css/components/btn.scss
+++ b/css/components/btn.scss
@@ -3,8 +3,8 @@
     text-align: center;
     background: #E01F3D;
     color: #ffffff;
-    padding: 18px 41px;
-    border-radius: 100px;
+    padding: rem(18px) rem(41px);
+    border-radius: rem(100px);
     font-weight: 700;
     text-decoration: none;
     text-transform: uppercase;
