--- a/css/components/colors.scss
+++ b/css/components/colors.scss
@@ -26,6 +26,7 @@
         height: 100%;
     }
     &__content{
+        position: relative;
         width: 0;
         overflow: hidden;
         background-color: rgba(89, 89, 89, .9);
@@ -38,9 +39,10 @@
         &.active{
             width: rem(390px);
             transition: width .4s;
-            @include tablets{
+            /*@include tablets{
                 width: calc(100vw - 285px);
-            }
+            }*/
+            /*
             @include phones{
                 display: flex;
                 position: absolute;
@@ -49,7 +51,7 @@
                 height: 100vh;
                 width: 100vw;
                 z-index: 3;
-            }
+            }*/
         }
         &-block{
             width: 400px;
@@ -96,7 +98,7 @@
         justify-content: center;
         
     }
-}
+}/*
 @include phones{
     .color__name.active{ 
         transition: .4s;  
@@ -107,4 +109,4 @@
         height: 100vh;
     }
 
-}
+}*/
