--- a/css/components/footer.scss
+++ b/css/components/footer.scss
@@ -5,7 +5,7 @@
         display: flex;
         flex-direction: column;
         justify-items: center;
-        @include tablets{
+        @include phones{
             align-items: center;
         }
         margin-bottom: rem(20px);
