--- a/css/components/shop.scss
+++ b/css/components/shop.scss
@@ -4,22 +4,28 @@
     background: #F8FAF9;
     .container{
         display: flex;
-        max-width:$containerWidth + 90px ;
+        max-width:rem($containerWidth + 90px) ;
         width: 100%;
     }
     &__content{
         display: flex;
         align-items: center;
         padding: rem(66px) 0;
+        height: 100%;
         @include tablets{
             flex-direction: column;
         }
+        @include phones{
+            padding: rem(2px);
+        }
+
     }
     &__desc{
         position: relative;
         display: flex;
         flex-direction: column;
         width: 100%;
+        //height: 100vh;
         @include tablets{
             
             align-items: center;
@@ -32,6 +38,9 @@
                 flex-direction: column;
                 align-items: center;
         
+            }
+            @include phones{
+                //margin-bottom: rem(20px);
             }
         }
     }
@@ -46,8 +55,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 91px;
-        height: 91px;
+        width: rem(91px);
+        height: rem(91px);
         background: #9A9A9A;
         border-radius: 4px;
         margin-bottom: rem(25px);
@@ -67,8 +76,8 @@
         background: rgba(0, 0, 0, 0.06);
         box-shadow: 4px 4px 40px rgba(0, 0, 0, 0.06);
         backdrop-filter: blur(40px);
-        width: 273px;
-        height: 294px;
+        width: rem(273px);
+        height: rem(294px);
         display: block;
         border-radius: 4px;
         position: absolute;
@@ -85,14 +94,15 @@
         cursor: pointer;
         &--left{
             position: relative;
-            margin-right: rem(33px);
+            margin-left: 1%;
+            margin-right: 2%;
             @include tablets{
                 height: 50%;
                 right: 80%;
 
             }
             @include phones{
-                
+                height: 60%;
                 right: 95%;
                 margin-right: 0;
 
@@ -101,7 +111,7 @@
         &--right{
             position: relative;
             transform: rotate(180deg);
-            margin-right: rem(33px);
+            margin-right: 2%;
             @include tablets{
                 height: 50%;
                 
@@ -109,7 +119,7 @@
 
             }
             @include phones{
-                
+                height: 60%;
                 left: 95%;
                 margin-right: 0;
 
@@ -134,8 +144,8 @@
         line-height: rem(42px);
         margin-bottom: rem(24px);
         @include tablets{
-            font-size: 28px;
-            line-height: 32px;
+            font-size: rem(28px);
+            line-height: rem(32px);
         
         }
         @include phones{
@@ -147,6 +157,9 @@
         color: #666666;
         width: 80%;
         margin-bottom: rem(27px);
+        @include phones{
+            margin-bottom: rem(20px);
+        }
         
     }
     &__main-image{
@@ -167,6 +180,9 @@
             margin-right: 0px;
 
         }
+        @include phones{
+            margin-bottom: rem(20px);
+        }
         &--red{
             flex-shrink: 0;
         display: block;
@@ -185,7 +201,9 @@
             margin-right: 0px;
 
         }
-            
+        @include phones{
+            margin-bottom: rem(20px);
+        } 
         }
     }
     &__buy{
@@ -205,12 +223,20 @@
             margin-right: rem(30px);
         
         }
+        @include phones{
+            font-size: rem(32px);
+            line-height: rem(60px);
+            margin-bottom: rem(0px);
+        }
     }
     
 }
 .feature{
     display: flex;
     width: 100%;
+    @include phones{
+        margin-bottom: rem(20px);
+    }
     &__title{
         color: #666666;
         margin-bottom: rem(1px);
@@ -239,6 +265,7 @@
         border: 0;
         background: transparent;
         box-shadow: none;
+        margin :0;
     }
 
 
