--- a/css/components/colors.scss
+++ b/css/components/colors.scss
@@ -54,7 +54,7 @@
             }*/
         }
         &-block{
-            width: 400px;
+            width: 100%;
             padding: 5% 8%;
             font-family: 'Alegreya Sans';
             font-style: normal;
