--- a/css/components/colors.scss
+++ b/css/components/colors.scss
@@ -27,7 +27,7 @@
     }
     &__content{
         position: relative;
-        width: 0;
+        width: 0px;
         overflow: hidden;
         background-color: rgba(89, 89, 89, .9);
         backdrop-filter: blur(10px);
@@ -54,8 +54,8 @@
             }*/
         }
         &-block{
-            width: 100%;
-            padding: 5% 8%;
+            width: 100px;
+            padding: 11px  17px;
             font-family: 'Alegreya Sans';
             font-style: normal;
             font-weight: 400;
