--- a/css/layout.scss
+++ b/css/layout.scss
@@ -95,7 +95,7 @@ img {
 .wrapper {
 	position: relative;
     width: 100%;
-    min-height: 100%;
+    height: 100%;
 	/*min-width: $containerWidth - 50px;*/
     overflow: hidden;
 }
@@ -110,5 +110,10 @@ img {
 		max-width: rem(696px)+rem(20px);
 	}
 	
+}
+.maincontent{
+	height: 100%;
+	transition: transform 1s;
+	will-change: transform;
 }
 
