--- a/src/css/components/colors.scss
+++ b/src/css/components/colors.scss
@@ -1,48 +1,62 @@
-.colors{
-    background-color: #FFF;
+.colors {
+  background-color: #fff;
+  display: flex;
+  //justify-content: center;
+  justify-content: end;
+  //align-items: center;
+  //.container{
+  height: 100vh;
+  color: #fff;
+  background: url(././img/Colors/Colors_background.png) no-repeat;
+  background-position: 70% 0;
+  background-size: 2500px 100%;
+  position: relative;
+  //}
+
+  &__item--active {
+    @include phones {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 3;
+    }
+  }
+
+  &__title {
+    font-size: rem(48px);
+    line-height: rem(52px);
+    position: absolute;
+    color: #fff;
+    top: 10%;
+    left: 5%;
+  }
+  &__list {
     display: flex;
-    //justify-content: center;
     justify-content: end;
-    //align-items: center;
-    //.container{
-        height: 100vh;
-        color:#FFF;
-        background: url(././img/Colors/Colors_background.png) no-repeat;
-        background-position: 70% 0;
-        background-size: 2500px 100%;
-        position: relative;
-    //}
-    &__title{
-        font-size: rem(48px);
-        line-height: rem(52px);
-        position: absolute;
-        color:#FFF;
-        top:10%;
-        left: 5%;
+    height: 100%;
+    position: relative;
+    width: 100%;
+  }
+  &__content {
+    position: relative;
+    width: 0px;
+    overflow: hidden;
+    background-color: rgba(89, 89, 89, 0.9);
+    backdrop-filter: blur(10px);
+    transition: width 0.4s;
+    &--red {
+      background: rgba(124, 17, 33, 0.9);
+      backdrop-filter: blur(10px);
     }
-    &__list{
-        display: flex;
-        justify-content: end;
-        height: 100%;
-    }
-    &__content{
-        position: relative;
-        width: 0px;
-        overflow: hidden;
-        background-color: rgba(89, 89, 89, .9);
-        backdrop-filter: blur(10px);
-        transition: width .4s;
-        &--red{
-            background: rgba(124, 17, 33, 0.9);
-            backdrop-filter: blur(10px);
-        }
-        &.active{
-            width: rem(390px);
-            transition: width .4s;
-            /*@include tablets{
+    &.active {
+      width: rem(390px);
+      transition: width 0.4s;
+      /*@include tablets{
                 width: calc(100vw - 285px);
             }*/
-            /*
+      /*
             @include phones{
                 display: flex;
                 position: absolute;
@@ -52,53 +66,52 @@
                 width: 100vw;
                 z-index: 3;
             }*/
-        }
-        &-block{
-            width: 100px;
-            padding: 11px  17px;
-            font-family: 'Alegreya Sans';
-            font-style: normal;
-            font-weight: 400;
-            font-size: rem(16.0138px);
-            line-height: rem(24px);
-        }
     }
+    &-block {
+      width: 100px;
+      padding: 11px 17px;
+      font-family: "Alegreya Sans";
+      font-style: normal;
+      font-weight: 400;
+      font-size: rem(16.0138px);
+      line-height: rem(24px);
+    }
+  }
 }
 
-.color{
+.color {
+  height: 100%;
+  display: flex;
+  &__name {
+    transition: 0.2s;
     height: 100%;
-    display: flex;
-    &__name{
-        transition: .2s;
-        height: 100%;
-        width: rem(102px);
-        cursor: pointer;
-        &--gray{
-            background: #999999;
-        }
-        &--black{
-            background: #000000;
-        }
-        &--red{
-            background: #E01F3C;
-        }
-        &-content{
-            transform: rotate(-90deg) translateX(50%);
-            white-space: nowrap;
-            font-family: 'Alegreya Sans';
-            font-style: normal;
-            font-weight: 700;
-            font-size: 36px;
-            line-height: 43px;
-        }
-
-        display: flex;
-        position: relative;
-        align-items: end;
-        justify-content: center;
-        
+    width: rem(102px);
+    cursor: pointer;
+    &--gray {
+      background: #999999;
     }
-}/*
+    &--black {
+      background: #000000;
+    }
+    &--red {
+      background: #e01f3c;
+    }
+    &-content {
+      transform: rotate(-90deg) translateX(50%);
+      white-space: nowrap;
+      font-family: "Alegreya Sans";
+      font-style: normal;
+      font-weight: 700;
+      font-size: 36px;
+      line-height: 43px;
+    }
+
+    display: flex;
+    position: relative;
+    align-items: end;
+    justify-content: center;
+  }
+} /*
 @include phones{
     .color__name.active{ 
         transition: .4s;  
