--- a/src/css/components/player.scss
+++ b/src/css/components/player.scss
@@ -1,5 +1,7 @@
 
 .player{
+    position: relative;
+    z-index: 5;
      display: flex;
     justify-content: center;
     align-items: center;
@@ -69,11 +71,10 @@
     &__icon{
         display: block;
         position: relative;
-        top: 15%;
         margin-right: rem(10px);
         &-img{
-            width: 1.25rem;
-            height: 1.25rem;
+            width: 0.89rem;
+            height: 1.45rem;
         }
         @include phones{
             top:-7%;
@@ -123,8 +124,8 @@
             min-width: 333px;
             min-height: 197px;
         }
-        background: url(././img/player/player_bg.png) top left no-repeat;
-        background-size: 100% 100%;
+        //background: url(././img/player/player_bg.png) top left no-repeat;
+        //background-size: 100% 100%;
 
         &-icon{
             display: inline-block;
@@ -139,7 +140,10 @@
             }
         }
         &.active{
-            display: none;
+            .player__splash-icon{
+                display: none;
+            }
+            //display: none;
         }
     }
     &__elem{
@@ -159,6 +163,22 @@
     
 }
 
+#player{
+    position: absolute;
+        cursor: pointer;
+        width: rem(662px);
+        height: rem(392px);
+        @include tablets{
+            width: rem(594px);
+            height: rem(352px);
+        }
+        @include phones{
+            width: rem(395px);
+            height: rem(234px);
+            min-width: 333px;
+            min-height: 197px;
+        }
+}
 
 .slider__volume{
     z-index: 2;
